--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -2,5 +2,24 @@
 $primary: #663399;
 @import "~bootstrap/scss/bootstrap";
 
+// changing default font
+:root {
+  --bs-body-font-family: "Ubuntu", sans-serif;
+}
 
+html {
+  --saffron: #ff9933;
+  --green: #138808;
+  --navyBlue: #000080;
+  --white: #ffffff;
+  --black: #000000;
+  --road-grey: rgb(82, 82, 82);
+}
 
+body {
+  // letter-spacing: 0.1rem;
+  // word-spacing: 0.4rem;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
